releases/armi/v0.2.0/_sources/gallery/framework/run_materials.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/framework/run_materials.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_framework_run_materials.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_framework_run_materials.py:


Listing of Material Library
===========================

This is a listing of all the elements in all the materials that are included in the ARMI
material library. Many of the materials in this library are academic in quality and
contents. Some have temperature dependent properties, but some don't. You can provide
your own proprietary material properties via a plugin.

More info about the materials here: :py:mod:`armi.materials`.

.. GENERATED FROM PYTHON SOURCE LINES 26-62



.. image:: /gallery/framework/images/sphx_glr_run_materials_001.png
    :alt: Mass fractions in the ARMI material library
    :class: sphx-glr-single-img





.. code-block:: default

    import numpy as np
    import matplotlib.pyplot as plt

    from armi import configure, materials
    from armi.nucDirectory import nuclideBases

    MAX_Z = 96  # stop at Curium

    configure(permissive=True)

    materialNames = []
    mats = list(materials.iterAllMaterialClassesInNamespace(materials))
    numMats = len(mats)

    zVals = np.zeros((numMats, MAX_Z))

    for mi, matCls in enumerate(mats):
        m = matCls()
        materialNames.append(m.name)
        for nucName, frac in m.p.massFrac.items():
            nb = nuclideBases.byName[nucName]
            idx = mi, nb.z - 1
            zVals[idx] += frac

    fig, ax = plt.subplots(figsize=(16, 12))
    im = ax.imshow(zVals, cmap="YlGn")

    ax.set_xticks(np.arange(MAX_Z))
    ax.set_yticks(np.arange(numMats))
    ax.set_xticklabels(np.arange(MAX_Z) + 1, fontsize=6)
    ax.set_yticklabels(materialNames)
    ax.set_xlabel("Proton number (Z)")
    ax.grid(alpha=0.2, ls="--")

    ax.set_title("Mass fractions in the ARMI material library")
    plt.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.921 seconds)


.. _sphx_glr_download_gallery_framework_run_materials.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: run_materials.py <run_materials.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: run_materials.ipynb <run_materials.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
